hello-kubes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-amd64
  labels:
    app: helloworld
    arch: amd64
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloworld
      arch: amd64
  template:
    metadata:
      labels:
        app: helloworld
        arch: amd64
    spec:
      containers:
        - name: helloworld
          image: "ghcr.io/threadproc/hello-kubernetes:1.10"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      nodeSelector:
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - helloworld
            topologyKey: "kubernetes.io/hostname"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-arm64
  labels:
    app: helloworld
    arch: arm64
spec:
  replicas: 8
  selector:
    matchLabels:
      app: helloworld
      arch: arm64
  template:
    metadata:
      labels:
        app: helloworld
        arch: arm64
    spec:
      containers:
        - name: helloworld
          image: "ghcr.io/threadproc/hello-kubernetes:1.10"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
      nodeSelector:
        kubernetes.io/arch: arm64
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - helloworld
            topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
---
