hello-kubes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-amd64
  labels:
    app: helloworld
    arch: amd64
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: helloworld
    arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-arm64
  labels:
    app: helloworld
    arch: arm64
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: helloworld
    arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-all
  labels:
    app: helloworld
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: helloworld
---
