hello-kubes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  namespace: default
spec:
  rules:
  - host: "k8s-helloworld.threadproc.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloworld
            port:
              number: 80
